@@ -1,5 +1,10 @@
 2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-hkp-source.c: Fix crasher and memory leaks
+    in proxy support. Bug #324312
+    
+2006-03-12  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-passphrase.c: Don't crash when prompting
     for passphrases without prompt string. Fixes Bug #334275
     
